<resources>
    <string name="app_name">RemindMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="Notification">Напоминание</string>
    <string name="favourite">Избранное</string>
    <string name="Downloads">Архив</string>
    <string name="Settings">Настройки</string>
    <string name="help">Справка</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="atab_item_history">HISTORY</string>
    <string name="atab_item_ideas">IDEAS</string>
    <string name="atab_item_TODO">TODO</string>
    <string name="atab_item_birthday">BIRTHDAY</string>
</resources>
