<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/Notification"
        android:icon="@drawable/ic_message_black_24dp"
        android:id="@+id/notification"

        />
    <item
        android:title="@string/favourite"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:id="@+id/favourite"

        />
    <item
        android:title="@string/Downloads"
        android:id="@+id/downloads"
        android:icon="@drawable/ic_file_download_black_24dp"

        />
    <item
        android:title="@string/Settings"
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"

        />
    <item
        android:title="@string/help"
        android:id="@+id/help"
        android:icon="@drawable/ic_help_black_24dp"

        />


</menu>